# hawki

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  contributors.md  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.github/workflows/: hawki-deep.yml  publish.yml
cli/: hawki_cli.py
demo/: Dockerfile.demo  README.md
demo/DeFiVulnLabs/: DEMO_SOURCE.md
demo/contracts/: DelegateCallExample.sol  MysteryLogic.sol  ReentrancyDemo.sol  VulnerableToken.sol
demo/damn-vulnerable-defi/: DEMO_SOURCE.md
demo/not-so-smart-contracts/: DEMO_SOURCE.md
demo/pancake-smart-contracts/: DEMO_SOURCE.md
docker/: Dockerfile
docs/: chains.md  deep_agent.md  doctor.md  enterprise.md  export.md  verification.md
docs/case-studies/: bzx-hack.md  pancakebunny-hack.md
hawki/: __init__.py
hawki/core/: __init__.py  chain_config.py
tests/: test_cov_bytecode_analyzer.py  test_cov_chain_config.py  test_cov_deep_code_generator.py  test_cov_deep_hybrid_planner.py  test_cov_deep_llm_planner.py  test_cov_deep_memory_extra.py  test_cov_deep_novel_executor.py  test_cov_deep_orchestrator.py  test_cov_deep_orchestrator_continuous.py  test_cov_deep_rule_executor.py  test_cov_deps_extra.py  test_cov_diagnostics_checks.py  test_cov_diagnostics_doctor.py  test_cov_explorer_client.py  test_cov_formal_hevm.py  test_cov_formal_registry.py  test_cov_formal_smtchecker.py  test_cov_telemetry_collector.py  test_cov_telemetry_store.py  test_cov_upgrade_safety.py  test_cov_verify_bytecode.py  test_deep_budget.py  test_deep_memory.py  test_deep_planner.py  test_deps_scanner.py  test_diagnostics.py  test_exporters.py  test_formal_registry.py  test_parser.py  test_registry.py  test_rule_liveness.py  test_rules.py  test_scoring_engine.py  test_upgrade_safety.py  test_verify_bytecode.py
tests/ai/: test_cov_ai_lite_llm_adapter.py  test_cov_ai_llm_orchestrator.py  test_cov_ai_reasoning_agent.py  test_prompt_manager.py  test_reasoning_agent.py
tests/monitoring/: test_alert_manager.py  test_cov_monitoring_monitor.py  test_cov_monitoring_watchers.py  test_state_manager.py  test_watcher_base.py
tests/remediation_engine/: test_engine.py
tests/repo_intelligence/: test_cov_repo_indexer.py  test_cov_repo_parser.py
tests/reporting/: test_chart_renderer.py  test_cov_report_generator.py  test_scoring.py
tests/sandbox/: test_cov_sandbox_deploy_config.py  test_cov_sandbox_manager.py  test_sandbox_manager.py
tests/static_rule_engine/: test_cov_rules_engine.py  test_cov_rules_functions.py  test_cov_rules_source.py  test_fp_accesscontrol.py  test_fp_calls.py  (+9 more)
(+211 files in other folders)
