[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hawki"
version = "1.0.0"
description = "Holistic Analysis for Web3 Kode and Infrastructure - Security intelligence platform"
readme = "README.md"
authors = [{name = "0xSemantic", email = "0xsemantic@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "tree-sitter>=0.20.1",
    "tree-sitter-solidity>=0.1.2",
    "gitpython>=3.1.40",
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "colorlog>=6.7.0",
    "litellm>=1.0.0",
    "docker>=6.1.3",
    "web3>=6.15.0,<7",
    "py-solc-x>=2.0.0",
    "eth-account>=0.8.0",
    "rich>=13.0.0",
    "packaging>=23.3",
    "toml>=0.10.2",
]

[project.optional-dependencies]
reports = [
    "jinja2>=3.1.0",
    "matplotlib>=3.7.0",
]
pdf = [
    "pdfkit>=1.0.0",
]
prove = [
    "z3-solver==4.12.2.0",
]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]
all = [
    "hawki[reports,pdf,prove]",
]

[project.scripts]
hawki = "cli.hawki_cli:main"

[tool.setuptools.packages.find]
include = ["hawki*", "cli*"]

[tool.setuptools.package-data]
"hawki.core.static_rule_engine" = ["rules/*.py"]
"hawki.core.ai_engine" = ["prompt_templates/*.json"]
"hawki.core.deep" = ["prompts/*.txt"]
"hawki.core.remediation_engine" = ["templates/*.json"]
"hawki.core.exploit_sandbox" = ["attack_scripts/*.py"]
"hawki.core.monitoring" = ["watchers/*.py"]
"hawki.core.data_layer.reporting" = ["templates/*.md", "templates/*.html", "templates/*.json"]
"hawki" = ["py.typed"]
[tool.coverage.run]
source = ["hawki"]
omit = [
    # Runtime exploit payloads executed inside the Docker sandbox with env-provided
    # contract addresses; they are never imported by the test suite and cannot be
    # unit-tested without a live container, so they are excluded from coverage.
    "hawki/core/exploit_sandbox/attack_scripts/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
